# py-memory-manager

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .releaserc.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/py_memory_manager/: __init__.py
test/: test_py_memory_manager.py
