[project]
name = "py-memory-manager"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacob Alheid", email = "shakefu@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-docker>=3.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = [
    "test/**",
]
